--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     
     <img src="https://avatars3.githubusercontent.com/u/36045822?v=4">
     
+    <ul>
+      <li>Youtube</li>
+      <li>Netflix</li>
+      <li>Online shopping sites</li>
+    </ul>
     Hello there, awesome person!
   </body>
   
