--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <img src="https://avatars3.githubusercontent.com/u/36045822?v=4">
     
     <ul>
-      <li>Youtube</li>
-      <li>Netflix</li>
-      <li>Online shopping sites</li>
+      <li><a href="https://www.youtube.com/">This is a link to Youtube</a></li>
+      <li><a href="https://www.netflix.com/ca/">This is a link to Netflix</a></li>
+      <li><a href="https://www.brandymelvilleusa.com/">This is a link to an online shopping site</a></li>
     </ul>
     Hello there, awesome person!
   </body>
